--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,24 +44,27 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="234dp"
+        android:layout_width="@dimen/_180sdp"
         android:layout_height="64dp"
+        android:background="@drawable/round_btn"
         android:bufferType="spannable"
         android:text="@string/Login"
         android:textSize="@dimen/_15ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.801"
+        app:layout_constraintVertical_bias="0.787"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="237dp"
+        android:layout_width="@dimen/_180sdp"
         android:layout_height="69dp"
         android:text="@string/New_Register"
         android:textSize="@dimen/_15ssp"
+        android:background="@drawable/round_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
