--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,8 @@
       android:background="@drawable/input_bg"
       android:drawableLeft="@drawable/baseline_person_24"
       android:ems="10"
-      android:hint="    Username"
+      android:hint="Email ID"
+      android:drawablePadding="@dimen/_10sdp"
       android:inputType="textPersonName"
       android:minHeight="@dimen/_20sdp"
       android:paddingLeft="@dimen/_15sdp"
@@ -167,7 +168,8 @@
       android:background="@drawable/input_bg"
       android:drawableLeft="@drawable/baseline_security_24"
       android:ems="10"
-      android:hint="  PASSWORD"
+      android:hint="PASSWORD"
+      android:drawablePadding="@dimen/_10sdp"
       android:inputType="textPassword"
       android:paddingLeft="@dimen/_15sdp"
       android:paddingTop="@dimen/_8sdp"
