--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -45,18 +45,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.936" />
 
-<!--    <Button-->
-<!--        android:id="@+id/button10"-->
-<!--        android:layout_width="@dimen/_250sdp"-->
-<!--        android:layout_height="@dimen/_37sdp"-->
-<!--        android:layout_weight="1"-->
-<!--        android:text="@string/Profile"-->
-<!--        android:textSize="@dimen/_14ssp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.863" />-->
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="@dimen/_250sdp"
+        android:layout_height="@dimen/_37sdp"
+        android:layout_weight="1"
+        android:text="@string/Profile"
+        android:textSize="@dimen/_14ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.863" />
 
     <Button
         android:id="@+id/button7"
