--- a/app/src/main/res/layout/activity_about1.xml
+++ b/app/src/main/res/layout/activity_about1.xml
@@ -5,23 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C9E3CECE"
-    tools:context=".Our_Vision"
-    tools:ignore="ExtraText">
-
-
-    \
-
+    tools:context=".about">
+    
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteX="80dp"
     tools:layout_editor_absoluteY="0dp">
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/textView4"
@@ -30,7 +27,7 @@
             android:layout_marginStart="@dimen/_117sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="casual"
-
+            android:gravity="center"
             android:text="@string/SHURUT_APP"
             android:textSize="@dimen/_15ssp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,52 +37,74 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="179dp"
-            android:layout_height="167dp"
-            android:layout_marginLeft="@dimen/_85sdp"
+            android:id="@+id/imageView3"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_80sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginLeft="@dimen/_105sdp"
             android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.121"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView25"
-            app:layout_constraintVertical_bias="0.099"
-            app:srcCompat="@drawable/our_vsion_logo" />
-
-        <TextView
-            android:id="@+id/textView27"
-            android:layout_width="wrap_content"
-            android:layout_height="543dp"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:gravity="center"
-android:layout_marginTop="@dimen/_1sdp"
-            android:text="@string/vision_content"
-            android:textSize="@dimen/_16ssp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.106"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.578" />
+            app:layout_constraintVertical_bias="0.13999999"
+            app:srcCompat="@drawable/about"
+            android:contentDescription="@string/Extra"
+            tools:ignore="ContentDescription" />
+
 
         <TextView
-            android:id="@+id/textView24"
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_97sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:backgroundTint="#982828"
+            android:fontFamily="serif"
+            android:text="@string/aboiut_us"
+            android:textColor="#EBDF5252"
+            android:textSize="@dimen/_22ssp"
+            android:textStyle="bold"
+            app:drawableTint="#3949AB"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.79"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.17000002" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="339dp"
+            android:layout_height="512dp"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:gravity="center"
+            android:text="@string/content"
+            android:textSize="@dimen/_17ssp"
+            android:textStyle="italic"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.51"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.643" />
+
+        <TextView
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/powered"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:fontFamily="sans-serif-light"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginTop="@dimen/_3sdp"
             android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_20sdp"
             app:layout_constraintVertical_bias="0.98" />
 
     </LinearLayout>
