--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,84 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A322CAFF"
+    android:background="@drawable/maldives"
     android:foregroundTint="#9F1BD8"
     android:paddingTop="2dp"
     tools:context=".MainActivity">
+<com.google.android.material.bottomappbar.BottomAppBar
+    android:id="@+id/bottomAppBar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:backgroundTint="#3B4063C5"
+    app:fabCradleMargin="10dp"
+    app:fabCradleRoundedCornerRadius="10dp"
+    app:fabCradleVerticalOffset="10dp">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottomNavigationView"
+        android:layout_marginRight="16dp"
+        app:menu="@menu/bottom_nav_menu"
+        android:background="@drawable/transparent_background"
+        />
+</com.google.android.material.bottomappbar.BottomAppBar>
 
-    <TextView
-        android:id="@+id/textView8"
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/powered"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+        android:layout_marginBottom="@dimen/_15sdp"
+        app:fab_addButtonColorNormal="#E42CE3CD"
+        app:fab_addButtonColorPressed="@color/white"
+        app:fab_addButtonPlusIconColor="@color/black"
+        app:layout_anchor="@id/bottomAppBar"
+        app:layout_anchorGravity="center_horizontal">
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_title="Gallery"
+            app:fab_icon="@drawable/apply"
+            app:fabCustomSize="@dimen/_100sdp"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white"
+            app:fab_size="normal"
+            android:id="@+id/application"/>
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:text="@string/Home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.937" />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/gallery"
+            android:onClick="gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white"
+            app:fab_icon="@drawable/baseline_photo_library_24"
+            app:fab_size="normal"
+            app:fab_title="@string/gallery"
+            />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:text="@string/aboiut_us"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.936" />
 
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="@dimen/_250sdp"
-        android:layout_height="@dimen/_37sdp"
-        android:layout_weight="1"
-        android:text="@string/Profile"
-        android:textSize="@dimen/_14ssp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.863" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="@dimen/_78sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:text="@string/CONTACT"
-        android:textSize="@dimen/_9ssp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.936" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="@dimen/_90sdp"
         android:layout_height="@dimen/_80sdp"
-        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_105sdp"
         android:layout_marginEnd="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,9 +84,11 @@
         android:id="@+id/textView"
         android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_30sdp"
-        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_82sdp"
+        android:layout_marginTop="@dimen/_118sdp"
         android:layout_marginEnd="@dimen/_25sdp"
         android:backgroundTint="#E1D81B60"
+        android:fontFamily="serif-monospace"
         android:foregroundTint="#601212"
         android:text="@string/WELCOME"
         android:textSize="@dimen/_23ssp"
@@ -109,6 +104,9 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_100sdp"
+        android:layout_marginTop="@dimen/_155sdp"
+        android:fontFamily="serif-monospace"
         android:text="@string/SHURUT_APP"
         android:textSize="@dimen/_23ssp"
         android:textStyle="bold"
@@ -120,13 +118,16 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="@dimen/_240sdp"
-        android:layout_height="@dimen/_270sdp"
+        android:layout_width="318dp"
+        android:layout_height="252dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:fontFamily="sans-serif-condensed-light"
         android:gravity="center"
         android:shadowColor="#573434"
         android:text="@string/QUATE"
         android:textAppearance="@style/Theme.Shuruat1"
-        android:textColor="#A61D26C3"
+        android:textColor="#9A1D26C3"
         android:textColorHighlight="#C51010"
         android:textColorLink="#931E1E"
         android:textSize="@dimen/_24ssp"
@@ -136,6 +137,6 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.576" />
+        app:layout_constraintVertical_bias="0.482" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
