--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A322CAFF">
+    android:background="@drawable/bg_2">
 
 
   <TextView
@@ -13,24 +13,14 @@
       android:layout_height="wrap_content"
       android:text="@string/powered"
       app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginStart="@dimen/_117sdp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.963" />
 
-  <androidx.appcompat.widget.Toolbar
-      android:id="@+id/toolbar"
-      android:layout_width="@dimen/_350sdp"
-      android:layout_height="@dimen/_30sdp"
-      android:background="#4D16326A"
-      android:minHeight="?attr/actionBarSize"
-      android:theme="?attr/actionBarTheme"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0" />
+
 
   <ImageView
       android:id="@+id/imageView"
@@ -40,25 +30,27 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginLeft="@dimen/_17sdp"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.145"
+      app:layout_constraintVertical_bias="0.149"
       app:srcCompat="@drawable/login" />
 
   <TextView
-      android:id="@+id/textView2"
+      android:id="@+id/shuruat"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="@dimen/_1sdp"
-      android:layout_marginTop="@dimen/_1sdp"
+      android:layout_marginStart="@dimen/_110sdp"
+      android:layout_marginTop="@dimen/_10sdp"
+      android:fontFamily="casual"
       android:text="@string/SHURUT_APP"
-      android:textSize="@dimen/_20ssp"
-      android:textStyle="bold"
+      android:textColor="#C6000000"
+      android:textSize="@dimen/_18ssp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.484"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0" />
+      app:layout_constraintVertical_bias="0.003" />
 
   <TextView
       android:id="@+id/textView3"
@@ -83,9 +75,9 @@
       android:layout_marginEnd="32dp"
       android:background="@drawable/input_bg"
       android:drawableLeft="@drawable/baseline_person_24"
+      android:drawablePadding="@dimen/_10sdp"
       android:ems="10"
       android:hint="Email ID"
-      android:drawablePadding="@dimen/_10sdp"
       android:inputType="textPersonName"
       android:minHeight="@dimen/_20sdp"
       android:paddingLeft="@dimen/_15sdp"
@@ -94,9 +86,10 @@
       android:paddingBottom="@dimen/_10sdp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.47"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView3"
-      app:layout_constraintVertical_bias="0.041" />
+      app:layout_constraintVertical_bias="0.075" />
 
   <Button
       android:id="@+id/button"
@@ -181,5 +174,19 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.607" />
+
+  <CheckBox
+      android:id="@+id/eye2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/_15sdp"
+      android:layout_marginBottom="92dp"
+      app:layout_constraintBottom_toTopOf="@+id/button"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.828"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
+      app:layout_constraintVertical_bias="0.0"
+      tools:ignore="UnknownIdInLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
