--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -26,38 +26,7 @@
             />
     </com.google.android.material.bottomappbar.BottomAppBar>
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_15sdp"
-        app:fab_addButtonColorNormal="#E42CE3CD"
-        app:fab_addButtonColorPressed="@color/white"
-        app:fab_addButtonPlusIconColor="@color/black"
-        app:layout_anchor="@id/bottomAppBar"
-        app:layout_anchorGravity="center_horizontal">
-<!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:fab_title="Gallery"-->
-<!--            app:fab_icon="@drawable/apply"-->
-<!--            app:fabCustomSize="@dimen/_100sdp"-->
-<!--            app:fab_colorNormal="@color/white"-->
-<!--            app:fab_colorPressed="@color/white"-->
-<!--            app:fab_size="normal"-->
-<!--            android:id="@+id/application"/>-->
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/gallery"
-            android:onClick="gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white"
-            app:fab_icon="@drawable/baseline_photo_library_24"
-            app:fab_size="normal"
-            app:fab_title="@string/gallery"
-            />
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -123,8 +92,8 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="461dp"
+                android:layout_width="321dp"
+                android:layout_height="457dp"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_20sdp"
@@ -141,5 +110,37 @@
 
         </LinearLayout>
     </ScrollView>
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_15sdp"
+        app:fab_addButtonColorNormal="#E42CE3CD"
+        app:fab_addButtonColorPressed="@color/white"
+        app:fab_addButtonPlusIconColor="@color/black"
+        app:layout_anchor="@id/bottomAppBar"
+        app:layout_anchorGravity="center_horizontal">
+        <!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:fab_title="Gallery"-->
+        <!--            app:fab_icon="@drawable/apply"-->
+        <!--            app:fabCustomSize="@dimen/_100sdp"-->
+        <!--            app:fab_colorNormal="@color/white"-->
+        <!--            app:fab_colorPressed="@color/white"-->
+        <!--            app:fab_size="normal"-->
+        <!--            android:id="@+id/application"/>-->
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/gallery"
+            android:onClick="gallery22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white"
+            app:fab_icon="@drawable/baseline_photo_library_24"
+            app:fab_size="normal"
+            app:fab_title="@string/gallery"
+            />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
